--- a/scss/partials/modules/_nav.scss
+++ b/scss/partials/modules/_nav.scss
@@ -149,13 +149,64 @@
 }
   
 .nav-popout {
+    
     background-color: $color-main;
+    font-size: 20px;
+
+    
 
     ul {
-        margin: 0;
+        line-height: 1;
         list-style-type: none;
         display: flex;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        
+        small {
+          font-size: 12px;
+          
+        }
+
+        
+
+        a {
+          display: flex;
+          padding: 18px 50px 10px;
+          text-decoration: none;
+          color: white;
+          
+          flex-direction: column;
+          align-items: center;
+
+          span {
+            font-size: 1.35em;
+            padding: 0 0 10px;
+          }
+        }
     }
+}
+$colors: (
+    1: #926FB1,
+    2: #4183D7,
+    3: #2ECC71,
+    4: #D64541,
+    5: #926FB1,
+    6: #F62459,
+    7: #CE4125
+);
+@each $key, $color in $colors {
+  .link-#{$key} {
+      span{
+      color: $color; // Set the text color
+      }
+      &:hover {
+          background-color: lighten($color, 20%); // Change background color on hover
+          span {
+            color: white;
+          }
+      }
+  }
 }
 
 
